--- a/hello.html
+++ b/hello.html
@@ -5,10 +5,6 @@
     </head>
     <body>
         hello , word! anh dan dep trai vo doi
-<<<<<<< HEAD
-        hello a third time!
-=======
-        hello hello hello
->>>>>>> c5970781accd22e03f03c69e374f794d9c13ddd0
+        hello a third timme!
     </body>
 </html>
