qua la dep trai

--- a/hello.html
+++ b/hello.html
@@ -9,6 +9,7 @@
         anhdandeptrai
         <!-- tien su cha nha may them cai cc -->
         anhdan
+        qua chi la dep trai luon day chu nhi a
 
     </body>
 </html>
