--- a/hello.html
+++ b/hello.html
@@ -10,6 +10,8 @@
         <!-- tien su cha nha may them cai cc -->
         anhdan
         qua chi la dep trai luon day chu nhi a
+        <!-- t moi la main o day -->
+        thang ham nay cut di
 
     </body>
 </html>
