--- a/hello.html
+++ b/hello.html
@@ -4,9 +4,7 @@
         <title> my website</title>
     </head>
     <body>
-        hello , word! anh dan dep trai vo doi
-        
-        addddd
+        hello 
 
     </body>
 </html>
