--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title> my website</title>
     </head>
     <body>
-        hello 
-        anh dan dep trai vl~~
+       
+        <h1>anh dan dep trai vl~~</h1>
     </body>
 </html>
